...
    }
  }

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final items = [
      const AppNavItem(icon: Symbols.home, label: 'Accueil'),
      const AppNavItem(icon: Symbols.store, label: 'Catalogue'),
      const AppNavItem(icon: Symbols.inventory_2, label: 'Inventaire'),
      const AppNavItem(icon: Symbols.receipt_long, label: 'Commandes'),
      const AppNavItem(icon: Symbols.person, label: 'Profil'),
    ];

    return Scaffold(
...
